--- a/FastMoq/FastMoq.csproj
+++ b/FastMoq/FastMoq.csproj
@@ -26,7 +26,7 @@
   <Target Name="SetPackageVersion">
     <PropertyGroup>
       <!-- You can customize the format and the rule about how version increases here. -->
-      <PackageVersion>1.$([System.DateTime]::Now.ToString("yy.MM.ddHH"))</PackageVersion>
+      <PackageVersion>1.$([System.DateTime]::Now.ToString("yy.MMdd.HHmm"))</PackageVersion>
     </PropertyGroup>
   </Target>
 
