--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -7,6 +7,9 @@ on:
     branches: ["master"]
     paths:
       - Help/**
+      - README.md
+      - CODE_OF_CONDUCT.md
+      - license.txt
       
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
