--- a/.gitattributes
+++ b/.gitattributes
@@ -3,7 +3,7 @@
 ###############################################################################
 * text=auto
 help/* linguist-documentation
-
+help/* linguist-vendored
 ###############################################################################
 # Set default behavior for command prompt diff.
 #
