--- a/.gitattributes
+++ b/.gitattributes
@@ -7,6 +7,8 @@
 *.htm linguist-vendored
 help/* linguist-documentation
 help/* linguist-vendored
+* linguist-language=c#
+
 ###############################################################################
 # Set default behavior for command prompt diff.
 #
