--- a/.gitattributes
+++ b/.gitattributes
@@ -7,7 +7,7 @@
 *.htm linguist-vendored
 *.css linguist-vendored
 * linguist-language=c#
-help/*.* linguist-documentation
+Help/* linguist-documentation
 
 ###############################################################################
 # Set default behavior for command prompt diff.
