Blazor multiple project. Removed supported for 3.1 and 5.0

--- a/.github/workflows/publish_FastMoq.yml
+++ b/.github/workflows/publish_FastMoq.yml
@@ -5,7 +5,9 @@ on:
       - master # Default release branch
     paths:
       - FastMoq/**
-      - .github/workflows/publish.yml
+      - FastMoq.Core/**
+      - FastMoq.Web/**
+      - .github/workflows/publish_FastMoq.yml
       
 jobs:
   publish:
