Cleanup and fix tests

--- a/FastMoq.Tests.Blazor/FastMoq.Tests.Blazor.csproj
+++ b/FastMoq.Tests.Blazor/FastMoq.Tests.Blazor.csproj
@@ -1,9 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFrameworks>net6.0;net7.0</TargetFrameworks>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
+
+<ItemGroup>
+  <PackageReference Include="System.IO.Abstractions" Version="17.*" />
+</ItemGroup>
 
 </Project>
