--- a/FastMoq.TestingExample/FastMoq.TestingExample.csproj
+++ b/FastMoq.TestingExample/FastMoq.TestingExample.csproj
@@ -21,7 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\FastMoq\FastMoq.csproj" />
+    <ProjectReference Include="..\FastMoq.Core\FastMoq.Core.csproj" />
   </ItemGroup>
 
 </Project>
