--- a/FastMoq.Tests/FastMoq.Tests.csproj
+++ b/FastMoq.Tests/FastMoq.Tests.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net6.0;net7.0</TargetFrameworks>
+    <TargetFrameworks>net5.0;net6.0;net7.0</TargetFrameworks>
     <Nullable>enable</Nullable>
       <LangVersion>latest</LangVersion>
     <IsPackable>false</IsPackable>
@@ -21,8 +21,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\FastMoq.Core\FastMoq.Core.csproj" />
-    <ProjectReference Include="..\FastMoq.Tests.Blazor\FastMoq.Tests.Blazor.csproj" />
-    <ProjectReference Include="..\FastMoq.Web\FastMoq.Web.csproj" />
   </ItemGroup>
 
 </Project>
