--- a/FastMoq.Tests.Blazor/FastMoq.Tests.Blazor.csproj
+++ b/FastMoq.Tests.Blazor/FastMoq.Tests.Blazor.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
 <ItemGroup>
-  <PackageReference Include="System.IO.Abstractions" Version="17.*" />
+  <PackageReference Include="TestableIO.System.IO.Abstractions.TestingHelpers" Version="*" />
 </ItemGroup>
 
 </Project>
