--- a/FastMoq.TestingExample/FastMoq.TestingExample.csproj
+++ b/FastMoq.TestingExample/FastMoq.TestingExample.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>net5.0;net6.0;net7.0</TargetFrameworks>
+    <TargetFrameworks>net6.0;net7.0</TargetFrameworks>
     <Nullable>enable</Nullable>
       <LangVersion>latest</LangVersion>
     <IsPackable>false</IsPackable>
