--- a/.github/workflows/publish_Core.yml
+++ b/.github/workflows/publish_Core.yml
@@ -25,7 +25,7 @@ jobs:
         uses: brandedoutcast/publish-nuget@v2
         with:
           # Filepath of the project to be packaged, relative to root of repository
-          PROJECT_FILE_PATH: FastMoq/FastMoq.Core.csproj
+          PROJECT_FILE_PATH: FastMoq/FastMoq.Core/FastMoq.Core.csproj
           
           # NuGet package id, used for version detection & defaults to project name
           PACKAGE_NAME: FastMoq.Core
