--- a/.github/workflows/publish_Web.yml
+++ b/.github/workflows/publish_Web.yml
@@ -26,7 +26,7 @@ jobs:
         uses: brandedoutcast/publish-nuget@v2
         with:
           # Filepath of the project to be packaged, relative to root of repository
-          PROJECT_FILE_PATH: FastMoq/FastMoq.Web.csproj
+          PROJECT_FILE_PATH: FastMoq/FastMoq.Web/FastMoq.Web.csproj
           
           # NuGet package id, used for version detection & defaults to project name
           PACKAGE_NAME: FastMoq
