--- a/FastMoq/FastMoq.csproj
+++ b/FastMoq/FastMoq.csproj
@@ -6,7 +6,7 @@
     <LangVersion>latest</LangVersion>
     <Nullable>enable</Nullable>
     <DebugType>embedded</DebugType>
-    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+    <GeneratePackageOnBuild>False</GeneratePackageOnBuild>
     <Authors>Winland, $(AssemblyName)</Authors>
     <Company>$(Authors)</Company>
     <Copyright>Copyright(c) 2021-2022 Christopher Winland</Copyright>
@@ -24,6 +24,7 @@
   <PropertyGroup>
     <GenerateNuspecDependsOn>$(GenerateNuspecDependsOn);SetPackageVersion</GenerateNuspecDependsOn>
     <GenerateDocumentationFile>True</GenerateDocumentationFile>
+    <Version>$(PackageVersion)</Version>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net6.0|AnyCPU'">
@@ -45,8 +46,12 @@
   <Target Name="SetPackageVersion">
     <PropertyGroup>
       <!-- You can customize the format and the rule about how version increases here. -->
-      <PackageVersion>2.$([System.DateTime]::Now.ToString("yy.MMdd.HHmm"))</PackageVersion>
-      <Version>2.$([System.DateTime]::Now.ToString("yy.MMdd.HHmm"))</Version>
+      <PackageVersion>2.$([System.DateTime]::Now.ToString("yy.MMdd.HH"))</PackageVersion>
+      <Version>2.$([System.DateTime]::Now.ToString("yy.MMdd.HH"))</Version>
+      <AssemblyVersion>2.$([System.DateTime]::Now.ToString("yy.MMdd.HH"))</AssemblyVersion>
+      <VersionPrefix>2.$([System.DateTime]::Now.ToString("yy.MMdd.HH"))</VersionPrefix>
+      <AssemblyVersion>2.$([System.DateTime]::Now.ToString("yy.MMdd.HH"))</AssemblyVersion>
+      <AssemblyFileVersion>2.$([System.DateTime]::Now.ToString("yy.MMdd.HH"))</AssemblyFileVersion>
     </PropertyGroup>
   </Target>
 
@@ -59,9 +64,11 @@
   <ItemGroup>
     <Content Include="..\LICENSE.TXT" Link="license.txt" Pack="true" PackagePath="license.txt" />
   </ItemGroup>
-
   <ItemGroup>
     <ProjectReference Include="..\FastMoq.Core\FastMoq.Core.csproj" />
     <ProjectReference Include="..\FastMoq.Web\FastMoq.Web.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="NuGet.Versioning" Version="6.*" />
   </ItemGroup>
 </Project>
