--- a/FastMoq.Web/FastMoq.Web.csproj
+++ b/FastMoq.Web/FastMoq.Web.csproj
@@ -21,6 +21,17 @@
     <IsPackable>true</IsPackable>
   </PropertyGroup>
 
+  <Target Name="MyTarget" AfterTargets="MinVer">
+    <PropertyGroup>
+      <PackageVersion>$(MinVerMajor).$(MinVerMinor).$(MinVerPatch)</PackageVersion>
+      <Version>$(PackageVersion)</Version>
+    </PropertyGroup>
+  </Target>
+
+  <PropertyGroup>
+    <MinVerIgnoreHeight>true</MinVerIgnoreHeight>
+  </PropertyGroup>
+
   <PropertyGroup>
     <GenerateDocumentationFile>True</GenerateDocumentationFile>
   </PropertyGroup>
