--- a/FastMoq/FastMoq.csproj
+++ b/FastMoq/FastMoq.csproj
@@ -22,6 +22,17 @@
   </PropertyGroup>
 
   <PropertyGroup>
+    <MinVerIgnoreHeight>true</MinVerIgnoreHeight>
+  </PropertyGroup>
+
+  <Target Name="MyTarget" AfterTargets="MinVer">
+    <PropertyGroup>
+      <PackageVersion>$(MinVerMajor).$(MinVerMinor).$(MinVerPatch)</PackageVersion>
+      <Version>$(PackageVersion)</Version>
+    </PropertyGroup>
+  </Target>
+
+  <PropertyGroup>
     <GenerateDocumentationFile>True</GenerateDocumentationFile>
   </PropertyGroup>
 
