--- a/.github/workflows/publish_FastMoq.yml
+++ b/.github/workflows/publish_FastMoq.yml
@@ -22,8 +22,8 @@ jobs:
           dotnet-version: 7.0.x
           
       # Publish
-      - name: Build FastMoq Web
-        run: dotnet build fastmoq\fastmoq.csproj -o .
+      - name: Build FastMoq
+        run: dotnet build fastmoq/fastmoq.csproj -o .
 
       - name: Creating a package
         run: dotnet pack -o .
