--- a/.github/workflows/publish_FastMoq.yml
+++ b/.github/workflows/publish_FastMoq.yml
@@ -23,7 +23,7 @@ jobs:
           
       # Publish
       - name: Build FastMoq
-        run: dotnet build -o .
+        run: dotnet build FastMoq/FastMoq/FastMoq.csproj -o .
 
       - name: Creating a package
         run: dotnet pack -o .
