--- a/.github/workflows/publish_FastMoq.yml
+++ b/.github/workflows/publish_FastMoq.yml
@@ -23,8 +23,9 @@ jobs:
           
       # Publish
       - name: Build FastMoq
-        run: dotnet build FastMoq/FastMoq/FastMoq.csproj -o .
-
+        run: dotnet build FastMoq/FastMoq.csproj -o .
+             dotnet pack -o .
+      
       - name: Creating a package
         run: dotnet pack -o .
 
