--- a/.github/workflows/publish_FastMoq.yml
+++ b/.github/workflows/publish_FastMoq.yml
@@ -23,7 +23,7 @@ jobs:
           
       # Publish
       - name: Build FastMoq
-        run: dotnet build FastMoq/FastMoq.csproj -o .
+        run: dotnet build fastmoq-release.sln -o .
              dotnet pack -o .
       
       - name: Creating a package
