--- a/FastMoq.Web/FastMoq.Web.csproj
+++ b/FastMoq.Web/FastMoq.Web.csproj
@@ -30,6 +30,7 @@
 
   <PropertyGroup>
     <MinVerIgnoreHeight>true</MinVerIgnoreHeight>
+    <GenerateNuspecDependsOn>$(GenerateNuspecDependsOn);MyTarget</GenerateNuspecDependsOn>
   </PropertyGroup>
 
   <PropertyGroup>
