--- a/FastMoq.Core/FastMoq.Core.csproj
+++ b/FastMoq.Core/FastMoq.Core.csproj
@@ -23,6 +23,7 @@
 
   <PropertyGroup>
     <MinVerIgnoreHeight>true</MinVerIgnoreHeight>
+    <GenerateNuspecDependsOn>$(GenerateNuspecDependsOn);MyTarget</GenerateNuspecDependsOn>
   </PropertyGroup>
 
   <Target Name="MyTarget" AfterTargets="MinVer">
