--- a/.github/workflows/publish_FastMoq.yml
+++ b/.github/workflows/publish_FastMoq.yml
@@ -30,5 +30,5 @@ jobs:
       - name: Creating a package
         run: dotnet pack FastMoq-Release.sln --no-build -c Release -o .
 
-      #- name: Publish to Nuget 
-      #  run: dotnet nuget push *.nupkg -s https://api.nuget.org/v3/index.json -k ${{secrets.NUGET_API_KEY}} --skip-duplicate -n 
+      - name: Publish to Nuget 
+        run: dotnet nuget push *.nupkg -s https://api.nuget.org/v3/index.json -k ${{secrets.NUGET_API_KEY}} --skip-duplicate -n 
