--- a/FastMoq.Web/FastMoq.Web.nuspec
+++ b/FastMoq.Web/FastMoq.Web.nuspec
@@ -9,27 +9,27 @@
     <readme>README.md</readme>
     <projectUrl>https://github.com/cwinland/FastMoq</projectUrl>
     <description>Easy and fast extension of the famous Moq mocking framework for mocking and auto injection of classes when testing. Now with Blazor support.</description>
-    <copyright>Copyright(c) 2022 Christopher Winland</copyright>
+    <copyright>Copyright(c) 2023 Christopher Winland</copyright>
     <tags>Easy fast injection inject mock extension Moq moqthis framework mocking class</tags>
     <repository type="git" url="https://github.com/cwinland/FastMoq" />
     <dependencies>
       <group targetFramework="net6.0">
         <dependency id="FastMoq.Core" version="$version$" exclude="Build,Analyzers" />
-        <dependency id="Microsoft.AspNetCore.Components" version="6.0.0" exclude="Build,Analyzers" />
-        <dependency id="Microsoft.AspNetCore.Components.Web" version="6.0.0" exclude="Build,Analyzers" />
-        <dependency id="Microsoft.Extensions.Configuration.Abstractions" version="6.0.0" exclude="Build,Analyzers" />
-        <dependency id="Microsoft.Extensions.DependencyInjection.Abstractions" version="7.0.0" exclude="Build,Analyzers" />
+        <dependency id="Microsoft.AspNetCore.Mvc.Core" version="2.1.38" exclude="Build,Analyzers" />
         <dependency id="System.Configuration.ConfigurationManager" version="7.0.0" exclude="Build,Analyzers" />
-        <dependency id="bunit" version="1.12.6" exclude="Build,Analyzers" />
+        <dependency id="bunit" version="1.24.10" exclude="Build,Analyzers" />
       </group>
       <group targetFramework="net7.0">
         <dependency id="FastMoq.Core" version="$version$" exclude="Build,Analyzers" />
-        <dependency id="Microsoft.AspNetCore.Components" version="7.0.0" exclude="Build,Analyzers" />
-        <dependency id="Microsoft.AspNetCore.Components.Web" version="7.0.0" exclude="Build,Analyzers" />
-        <dependency id="Microsoft.Extensions.Configuration.Abstractions" version="7.0.0" exclude="Build,Analyzers" />
-        <dependency id="Microsoft.Extensions.DependencyInjection.Abstractions" version="7.0.0" exclude="Build,Analyzers" />
+        <dependency id="Microsoft.AspNetCore.Mvc.Core" version="2.1.38" exclude="Build,Analyzers" />
         <dependency id="System.Configuration.ConfigurationManager" version="7.0.0" exclude="Build,Analyzers" />
-        <dependency id="bunit" version="1.12.6" exclude="Build,Analyzers" />
+        <dependency id="bunit" version="1.24.10" exclude="Build,Analyzers" />
+      </group>
+      <group targetFramework="net8.0">
+        <dependency id="FastMoq.Core" version="$version$" exclude="Build,Analyzers" />
+        <dependency id="Microsoft.AspNetCore.Mvc.Core" version="2.1.38" exclude="Build,Analyzers" />
+        <dependency id="System.Configuration.ConfigurationManager" version="7.0.0" exclude="Build,Analyzers" />
+        <dependency id="bunit" version="1.24.10" exclude="Build,Analyzers" />
       </group>
     </dependencies>
   </metadata>
