--- a/FastMoq/FastMoq.nuspec
+++ b/FastMoq/FastMoq.nuspec
@@ -9,7 +9,7 @@
     <readme>README.md</readme>
     <projectUrl>https://github.com/cwinland/FastMoq</projectUrl>
     <description>Encapsulates all of FastMoq Core and extensions Blazor/Web Support. Easy and fast extension of the famous Moq mocking framework for mocking and auto injection of classes when testing. Now with Blazor support.</description>
-    <copyright>Copyright(c) 2021-2022 Christopher Winland</copyright>
+    <copyright>Copyright(c) 2021-2023 Christopher Winland</copyright>
     <tags>Easy fast injection inject mock extension Moq moqthis framework mocking class blazor</tags>
     <repository type="git" url="https://github.com/cwinland/FastMoq" />
     <dependencies>
@@ -18,6 +18,10 @@
         <dependency id="FastMoq.Web" version="$version$" exclude="Build,Analyzers" />
       </group>
       <group targetFramework="net7.0">
+        <dependency id="FastMoq.Core" version="$version$" exclude="Build,Analyzers" />
+        <dependency id="FastMoq.Web" version="$version$" exclude="Build,Analyzers" />
+      </group>
+      <group targetFramework="net8.0">
         <dependency id="FastMoq.Core" version="$version$" exclude="Build,Analyzers" />
         <dependency id="FastMoq.Web" version="$version$" exclude="Build,Analyzers" />
       </group>
